Simple Bank project fully done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       />
       <!-- Custom CSS -->
       <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="./responsive.css" />
    </head>
    <body>
       <!-- Login Area Section -->
@@ -23,8 +24,8 @@
          </div>
          <div class="container">
             <form action="#" class="form lform">
-               <input type="text" name="" placeholder="Email" required />
-               <input type="password" name="" placeholder="Password" required />
+               <input type="text" name="" placeholder="Email" />
+               <input type="password" name="" placeholder="Password" />
 
                <input class="btn btn-cta" type="submit" value="Enter" />
             </form>
@@ -32,7 +33,7 @@
       </section>
       <!-- Transaction Section -->
       <section class="section-transaction hidden">
-         <div class="container grid grid--3--cols">
+         <div class="container grid grid--3--cols t-box-small">
             <div class="deposit status">
                <span class="subheading margin-bt-sm">Deposit</span>
                <h2 class="secondary-heading">
@@ -52,7 +53,7 @@
                </h2>
             </div>
          </div>
-         <div class="container grid grid--2--cols">
+         <div class="container grid grid--2--cols t-box-form">
             <form action="#" class="form dform">
                <h3 class="heading-tertiary">Deposit</h3>
                <input
