add requirement attribute of input element in html file

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
          </div>
          <div class="container">
             <form action="#" class="form lform">
-               <input type="text" name="" placeholder="Email" />
-               <input type="password" name="" placeholder="Password" />
+               <input type="text" name="" placeholder="Email" required />
+               <input type="password" name="" placeholder="Password" required />
 
                <input class="btn btn-cta" type="submit" value="Enter" />
             </form>
